# mini-player

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  main
.cache/clangd/index/: main.cpp.024363C3E48FEB7C.idx
include/: audio_clock.h  audio_decoder.h  audio_fifo.h  audio_player.h  audio_resampler.h  bounded_blocking_queue.h  demuxer.cpp  demuxer.h  ffmpeg_error.h  ffmpeg_raii.h  renderer.h  seek_controller.h  sync_controller.h  video_decoder.h
src/: audio_decoder.cpp  audio_fifo.cpp  audio_player.cpp  audio_resampler.cpp  demuxer.cpp  main.cpp  renderer.cpp  video_decoder.cpp
tests/: test_audio_fifo.cpp  test_audio_resampler.cpp  test_bounded_blocking_queue.cpp
